--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,13 @@ section {
   flex-direction: column-reverse;
 }
 
+#start {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* SECTION STYLE */
 @keyframes mymove {
   0% {
