add stylization around the board

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,23 @@ section {
 }
 /*RESET*/
 
+body{
+  background-image: url(../img/arena.jpg);
+  background-position: center;
+}
+
+  header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .players{
+    display: flex;
+    justify-content: space-between;
+  }
+
 /* PLAYER STYLE'S */
 .player_red,
 .player_black {
