--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
-/* GERAL */
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+/* GERAL */
 html,
 body,
 main,
@@ -8,6 +9,7 @@ section {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Press Start 2P', cursive;
 }
 
 .hidden {
@@ -27,24 +29,55 @@ body {
     flex-direction: column;
   }
 
+    body header img{
+      width: 80px;
+    }
+
+      body header .blackwhite{
+        width: 200px;
+      }
+
+  body .scoreMobile{
+    text-align: center;
+    margin: 0 auto;
+    font-size: 20px;
+    padding: 7px;
+    width: 80vw;
+  }
+
   body .players {
     display: flex;
     justify-content: space-between;
   }
 
+    body .players #player1, #player2{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0 15px;
+    }
+
+    body .players #player1 img, #player2 img{
+      width: 80px;
+    }
+
 #tab {
+  width: 100vw;
+  height: 50vh;
   display: flex;
   flex-direction: row;
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* background-image: url("/assets/img/pokeball.png"); */
+  background-image: url("/assets/img/pokebola.png");
+  background-position: center;
+  background-size: cover;
 }  
 
   #tab .col {
-    height: 665px;
-    width: 97px;
+    height: 305px;
+    width: 14vw;
     border: 1px solid black;
     display: flex;
     flex-direction: column-reverse;
@@ -52,8 +85,8 @@ body {
 
     #tab .col .player_red,
     #tab .col .player_black {
-      height: 50px;
-      width: 50px;
+      height: 8vh;
+      width: 14vw;
       border-radius: 50%;
       position: relative;
       animation: mymove 500ms ease-in-out;
@@ -61,10 +94,14 @@ body {
 
 body #start {
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+  body #start img{
+    width: 160px;
+  }
 
 /* EXTRA */
 
@@ -84,3 +121,21 @@ body #start {
 }
 
 /* EXTRA */
+
+@media screen and (min-width: 768px){
+  #tab {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* background-image: url("/assets/img/pokeball.png"); */
+  }  
+
+  body #start {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
