fixing background board and height and  width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,57 +10,58 @@ section {
   box-sizing: border-box;
 }
 
-.hidden {
-  display: none;
-}
-
 /* GERAL */
 body {
   background-image: url(../img/arena.jpg);
   background-position: center;
 }
 
-  body header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
+body header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
-  body .players {
-    display: flex;
-    justify-content: space-between;
-  }
+body .players {
+  display: flex;
+  justify-content: space-between;
+}
 
-#tab {
+.table {
   display: flex;
   flex-direction: row;
   position: absolute;
-  top: 50%;
+  height: 600px;
+  width: 657px;
+  top: 56%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* background-image: url("/assets/img/pokeball.png"); */
-}  
+  background-image: url(/assets/img/pokeball.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
-  #tab .col {
-    height: 665px;
-    width: 97px;
-    border: 1px solid black;
-    display: flex;
-    flex-direction: column-reverse;
-  }
+#tab .col {
+  width: 100%;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column-reverse;
+}
 
-    #tab .col .player_red,
-    #tab .col .player_black {
-      height: 50px;
-      width: 50px;
-      border-radius: 50%;
-      position: relative;
-      animation: mymove 500ms ease-in-out;
-    }
+#tab .col .player_red,
+#tab .col .player_black {
+  width: 100%;
+  height: 100px;
+  border-radius: 50%;
+  position: relative;
+  animation: mymove 500ms ease-in-out;
+}
 
 body #start {
   position: absolute;
+
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -84,3 +85,6 @@ body #start {
 }
 
 /* EXTRA */
+.hidden {
+  display: none;
+}
