--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ body .players #player1 img,
   width: 80px;
 }
 
-#tab {
+.table {
   width: 100vw;
   height: 50vh;
   display: flex;
@@ -73,7 +73,7 @@ body .players #player1 img,
   background-size: cover;
 }
 
-#tab .col {
+.table .col {
   height: 305px;
   width: 14vw;
   border: 1px solid black;
@@ -81,8 +81,8 @@ body .players #player1 img,
   flex-direction: column-reverse;
 }
 
-#tab .col .player_red,
-#tab .col .player_black {
+.table .col .player_red,
+.table .col .player_black {
   height: 8vh;
   width: 14vw;
   border-radius: 50%;
@@ -125,18 +125,56 @@ body #start img {
 /* EXTRA */
 
 @media screen and (min-width: 768px) {
-  #tab {
+  body header {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .table {
     flex-direction: row;
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* background-image: url("/assets/img/pokeball.png"); */
+    height: 600px;
+    width: 657px;
+    top: 56%;
+    background-image: url(/assets/img/pokebola.png);
+    background-repeat: no-repeat;
+  }
+
+  body header img {
+    width: 120px;
+  }
+
+  body header .blackwhite {
+    width: 349px;
+  }
+
+  body .players #player1 img,
+  #player2 img {
+    width: 200px;
+  }
+
+  .table .col {
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .table .col .player_red,
+  .table .col .player_black {
+    width: 100%;
+    height: 100px;
+  }
+
+  /* EXTRA */
+  .hidden {
+    display: none;
   }
 
   body #start {
-    top: 50%;
+    top: 41%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
