Adding images for the endPopUp

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,9 @@ body {
   }
 
   /* ESTILOS DIV QUE FINALIZA GAME */
+  #endPopUp {
+    border-radius: 5px;
+  }
   /* ESTILOS DIV QUE FINALIZA GAME */
 
 /* EXTRA */
