fixing position characters

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ body .players {
   justify-content: space-between;
 }
 
-body .players .scoreboard{
+body .players .scoreboard {
   display: none;
 }
 
@@ -174,7 +174,7 @@ body main.table.hidden {
     flex-direction: row;
     height: 600px;
     width: 657px;
-    top: 56%;
+    top: 59%;
     background-image: url(/assets/img/pokebola.png);
     background-repeat: no-repeat;
   }
@@ -193,18 +193,19 @@ body main.table.hidden {
     height: 100px;
   }
 
-  body .scoreMobile{
+  body .scoreMobile {
     display: none;
   }
 
-  body .players .scoreboard{
+  body .players .scoreboard {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
-  body .players .scorePlay1, .scorePlay2{
+  body .players .scorePlay1,
+  .scorePlay2 {
     font-size: 55px;
     padding-top: 20px;
   }
@@ -218,6 +219,13 @@ body main.table.hidden {
     top: 41%;
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+
+  body .players {
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
   }
 
   /* SCORE DESKTOP */
